objects/appirio_core__Config_Option__c.object
<CustomObject>
    <customHelpPage>appirio_core__ConfigurationHelp</customHelpPage>
    <description>Core package object. Configuration options, organized into configuration groups, contain one or more configuration values that you can edit. They have a name, version, and type (Text, Boolean, or Picklist), as well as help text describing the configuration controlled and the default values. Use configuration options together with Salesforce custom settings to configure FinancialForce PSA. Configuration options have a master-detail relationship with child configuration values and a lookup relationship to configuration groups.</description>
    <fields>
        <fullName>appirio_core__Allow_Multiple_Values__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Whether to allow multiple values for this option.</inlineHelpText>
        <label>Allow Multiple Values</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>appirio_core__Config_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Configuration Group</label>
        <referenceTo>appirio_core__Config_Group__c</referenceTo>
        <relationshipLabel>Configuration Options</relationshipLabel>
        <relationshipName>ConfigOptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>appirio_core__Description__c</fullName>
        <description>Description of the config option</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appirio_core__Group_Key__c</fullName>
        <formula>appirio_core__Config_Group__r.appirio_core__Key__c</formula>
        <label>Group Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appirio_core__Help_Text__c</fullName>
        <label>Help Text</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>appirio_core__Help_URL__c</fullName>
        <label>Help URL</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>appirio_core__Picklist_Values__c</fullName>
        <inlineHelpText>Enter one picklist value per line</inlineHelpText>
        <label>Picklist Values</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>appirio_core__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Text</fullName>
                    <default>true</default>
                    <label>Text</label>
                </value>
                <value>
                    <fullName>Boolean</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Picklist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>appirio_core__Version__c</fullName>
        <description>Version of the application that this option was added in.</description>
        <label>Version</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Configuration Option</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configuration Options</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>appirio_core__Picklist_Values_Check</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR(ISNULL( appirio_core__Picklist_Values__c ),  LEN( appirio_core__Picklist_Values__c ) = 0 ),  ISPICKVAL( appirio_core__Type__c , &apos;Picklist&apos;) )</errorConditionFormula>
        <errorDisplayField>appirio_core__Picklist_Values__c</errorDisplayField>
        <errorMessage>Picklist values are required for type Picklist</errorMessage>
    </validationRules>
</CustomObject>